feat: first update product and category
