# app/models/__init__.py
@@ -1,5 +1,6 @@
 from app.models.user import User, OTP
-from app.models.product import Product
+from app.models.product import Product, ProductImage, ProductVariant
+from app.models.category import Category
 from app.models.order import Order, OrderItem
 
-__all__ = ['User', 'OTP', 'Product', 'Order', 'OrderItem']
+__all__ = ['User', 'OTP', 'Product', 'ProductImage', 'ProductVariant', 'Category', 'Order', 'OrderItem']
